move context code out to context module

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
-        "m_environment.h": "c"
+        "m_environment.h": "c",
+        "nrf_log_ctrl.h": "c"
     }
 }
