Implement snapshot methods; Pull out node in separate header; Update file structure and Makefile

--- a/src/blend_project_templates/Thingy_IoT_SensorKit_v2.1.0/percom_demo/armgcc/Makefile
+++ b/src/blend_project_templates/Thingy_IoT_SensorKit_v2.1.0/percom_demo/armgcc/Makefile
@@ -42,9 +42,10 @@ $(abspath ../../../sdk_components/nfc/t2t_lib/nfc_t2t_lib_gcc.a) \
 
 #source common to all targets
 C_SOURCE_FILES += \
-$(abspath ../main.c) \
-$(abspath ../sensor.c) \
 $(abspath ../context.c) \
+$(abspath ../main.c) \
+$(abspath ../matching.c) \
+$(abspath ../sensor.c) \
 $(abspath ../../../blend/blend.c) \
 $(abspath ../../../source/modules/m_ble.c) \
 $(abspath ../../../source/modules/m_ble_flash.c) \
