--- a/src/blend_project_templates/nRF5_SDK_v14/blend_app_template/pca10056/s140/armgcc/Makefile
+++ b/src/blend_project_templates/nRF5_SDK_v14/blend_app_template/pca10056/s140/armgcc/Makefile
@@ -2,11 +2,10 @@ PROJECT_NAME     := ble_app_uart_c_pca10056_s140
 TARGETS          := nrf52840_xxaa
 OUTPUT_DIRECTORY := _build
 
-# SDK_ROOT := ../../../../../..
-# PROJ_DIR := ../../..
 PROJ_ROOT := ../../../../../../..
-# SDK_ROOT := $(wildcard $(PROJ_ROOT)/sdk/nRF5_SDK_14*/)
-SDK_ROOT := $(PROJ_ROOT)/sdk/nRF5_SDK_14.2.0_17b948a
+ZIP_EXCLUDE = $(wildcard $(PROJ_ROOT)/sdk/*.zip)
+SDK_DIR := $(filter-out $(ZIP_EXCLUDE), $(wildcard $(PROJ_ROOT)/sdk/nRF5_SDK_14*))
+
 LOCAL_SRC_DIR := ../../..
 LOCAL_SRCS := $(wildcard $(LOCAL_SRC_DIR)/*.c)
 
@@ -16,169 +15,169 @@ $(OUTPUT_DIRECTORY)/nrf52840_xxaa.out: \
 # Source files common to all targets
 SRC_FILES += \
   $(LOCAL_SRC_DIR)/main.c \
-  $(SDK_ROOT)/blend/blend.c \
-  $(SDK_ROOT)/components/libraries/experimental_log/src/nrf_log_backend_rtt.c \
-  $(SDK_ROOT)/components/libraries/experimental_log/src/nrf_log_backend_serial.c \
-  $(SDK_ROOT)/components/libraries/experimental_log/src/nrf_log_default_backends.c \
-  $(SDK_ROOT)/components/libraries/experimental_log/src/nrf_log_frontend.c \
-  $(SDK_ROOT)/components/libraries/experimental_log/src/nrf_log_str_formatter.c \
-  $(SDK_ROOT)/components/libraries/button/app_button.c \
-  $(SDK_ROOT)/components/libraries/util/app_error.c \
-  $(SDK_ROOT)/components/libraries/util/app_error_weak.c \
-  $(SDK_ROOT)/components/libraries/fifo/app_fifo.c \
-  $(SDK_ROOT)/components/libraries/scheduler/app_scheduler.c \
-  $(SDK_ROOT)/components/libraries/timer/app_timer.c \
-  $(SDK_ROOT)/components/libraries/uart/app_uart_fifo.c \
-  $(SDK_ROOT)/components/libraries/util/app_util_platform.c \
-  $(SDK_ROOT)/components/libraries/hardfault/hardfault_implementation.c \
-  $(SDK_ROOT)/components/libraries/util/nrf_assert.c \
-  $(SDK_ROOT)/components/libraries/atomic_fifo/nrf_atfifo.c \
-  $(SDK_ROOT)/components/libraries/balloc/nrf_balloc.c \
-  $(SDK_ROOT)/external/fprintf/nrf_fprintf.c \
-  $(SDK_ROOT)/external/fprintf/nrf_fprintf_format.c \
-  $(SDK_ROOT)/components/libraries/experimental_memobj/nrf_memobj.c \
-  $(SDK_ROOT)/components/libraries/pwr_mgmt/nrf_pwr_mgmt.c \
-  $(SDK_ROOT)/components/libraries/experimental_section_vars/nrf_section_iter.c \
-  $(SDK_ROOT)/components/libraries/strerror/nrf_strerror.c \
-  $(SDK_ROOT)/components/libraries/uart/retarget.c \
-  $(SDK_ROOT)/components/boards/boards.c \
-  $(SDK_ROOT)/components/drivers_nrf/clock/nrf_drv_clock.c \
-  $(SDK_ROOT)/components/drivers_nrf/common/nrf_drv_common.c \
-  $(SDK_ROOT)/components/drivers_nrf/gpiote/nrf_drv_gpiote.c \
-  $(SDK_ROOT)/components/drivers_nrf/uart/nrf_drv_uart.c \
-  $(SDK_ROOT)/components/libraries/bsp/bsp.c \
-  $(SDK_ROOT)/components/libraries/bsp/bsp_btn_ble.c \
-  $(SDK_ROOT)/components/libraries/bsp/bsp_nfc.c \
-  $(SDK_ROOT)/external/segger_rtt/SEGGER_RTT_Syscalls_GCC.c \
-  $(SDK_ROOT)/external/segger_rtt/SEGGER_RTT.c \
-  $(SDK_ROOT)/external/segger_rtt/SEGGER_RTT_printf.c \
-  $(SDK_ROOT)/components/ble/common/ble_advdata.c \
-  $(SDK_ROOT)/components/ble/ble_db_discovery/ble_db_discovery.c \
-  $(SDK_ROOT)/components/ble/common/ble_srv_common.c \
-  $(SDK_ROOT)/components/ble/nrf_ble_gatt/nrf_ble_gatt.c \
-  $(SDK_ROOT)/components/toolchain/gcc/gcc_startup_nrf52840.S \
-  $(SDK_ROOT)/components/toolchain/system_nrf52840.c \
-  $(SDK_ROOT)/components/ble/ble_services/ble_nus_c/ble_nus_c.c \
-  $(SDK_ROOT)/components/softdevice/common/nrf_sdh.c \
-  $(SDK_ROOT)/components/softdevice/common/nrf_sdh_ble.c \
-  $(SDK_ROOT)/components/softdevice/common/nrf_sdh_soc.c \
+  $(SDK_DIR)/blend/blend.c \
+  $(SDK_DIR)/components/libraries/experimental_log/src/nrf_log_backend_rtt.c \
+  $(SDK_DIR)/components/libraries/experimental_log/src/nrf_log_backend_serial.c \
+  $(SDK_DIR)/components/libraries/experimental_log/src/nrf_log_default_backends.c \
+  $(SDK_DIR)/components/libraries/experimental_log/src/nrf_log_frontend.c \
+  $(SDK_DIR)/components/libraries/experimental_log/src/nrf_log_str_formatter.c \
+  $(SDK_DIR)/components/libraries/button/app_button.c \
+  $(SDK_DIR)/components/libraries/util/app_error.c \
+  $(SDK_DIR)/components/libraries/util/app_error_weak.c \
+  $(SDK_DIR)/components/libraries/fifo/app_fifo.c \
+  $(SDK_DIR)/components/libraries/scheduler/app_scheduler.c \
+  $(SDK_DIR)/components/libraries/timer/app_timer.c \
+  $(SDK_DIR)/components/libraries/uart/app_uart_fifo.c \
+  $(SDK_DIR)/components/libraries/util/app_util_platform.c \
+  $(SDK_DIR)/components/libraries/hardfault/hardfault_implementation.c \
+  $(SDK_DIR)/components/libraries/util/nrf_assert.c \
+  $(SDK_DIR)/components/libraries/atomic_fifo/nrf_atfifo.c \
+  $(SDK_DIR)/components/libraries/balloc/nrf_balloc.c \
+  $(SDK_DIR)/external/fprintf/nrf_fprintf.c \
+  $(SDK_DIR)/external/fprintf/nrf_fprintf_format.c \
+  $(SDK_DIR)/components/libraries/experimental_memobj/nrf_memobj.c \
+  $(SDK_DIR)/components/libraries/pwr_mgmt/nrf_pwr_mgmt.c \
+  $(SDK_DIR)/components/libraries/experimental_section_vars/nrf_section_iter.c \
+  $(SDK_DIR)/components/libraries/strerror/nrf_strerror.c \
+  $(SDK_DIR)/components/libraries/uart/retarget.c \
+  $(SDK_DIR)/components/boards/boards.c \
+  $(SDK_DIR)/components/drivers_nrf/clock/nrf_drv_clock.c \
+  $(SDK_DIR)/components/drivers_nrf/common/nrf_drv_common.c \
+  $(SDK_DIR)/components/drivers_nrf/gpiote/nrf_drv_gpiote.c \
+  $(SDK_DIR)/components/drivers_nrf/uart/nrf_drv_uart.c \
+  $(SDK_DIR)/components/libraries/bsp/bsp.c \
+  $(SDK_DIR)/components/libraries/bsp/bsp_btn_ble.c \
+  $(SDK_DIR)/components/libraries/bsp/bsp_nfc.c \
+  $(SDK_DIR)/external/segger_rtt/SEGGER_RTT_Syscalls_GCC.c \
+  $(SDK_DIR)/external/segger_rtt/SEGGER_RTT.c \
+  $(SDK_DIR)/external/segger_rtt/SEGGER_RTT_printf.c \
+  $(SDK_DIR)/components/ble/common/ble_advdata.c \
+  $(SDK_DIR)/components/ble/ble_db_discovery/ble_db_discovery.c \
+  $(SDK_DIR)/components/ble/common/ble_srv_common.c \
+  $(SDK_DIR)/components/ble/nrf_ble_gatt/nrf_ble_gatt.c \
+  $(SDK_DIR)/components/toolchain/gcc/gcc_startup_nrf52840.S \
+  $(SDK_DIR)/components/toolchain/system_nrf52840.c \
+  $(SDK_DIR)/components/ble/ble_services/ble_nus_c/ble_nus_c.c \
+  $(SDK_DIR)/components/softdevice/common/nrf_sdh.c \
+  $(SDK_DIR)/components/softdevice/common/nrf_sdh_ble.c \
+  $(SDK_DIR)/components/softdevice/common/nrf_sdh_soc.c \
 
 # Include folders common to all targets
-# $(SDK_ROOT)/components/libraries/experimental_cli 
+# $(SDK_DIR)/components/libraries/experimental_cli 
 INC_FOLDERS += \
-  $(SDK_ROOT)/blend \
-  $(SDK_ROOT)/components/drivers_nrf/comp \
-  $(SDK_ROOT)/components/drivers_nrf/twi_master \
-  $(SDK_ROOT)/components/ble/ble_services/ble_ancs_c \
-  $(SDK_ROOT)/components/ble/ble_services/ble_ias_c \
-  $(SDK_ROOT)/components/libraries/pwm \
-  $(SDK_ROOT)/components/libraries/usbd/class/cdc/acm \
-  $(SDK_ROOT)/components/libraries/usbd/class/hid/generic \
-  $(SDK_ROOT)/components/libraries/usbd/class/msc \
-  $(SDK_ROOT)/components/libraries/usbd/class/hid \
-  $(SDK_ROOT)/components/ble/ble_services/ble_lbs \
-  $(SDK_ROOT)/components/ble/ble_services/ble_gls \
-  $(SDK_ROOT)/components/libraries/fstorage \
-  $(SDK_ROOT)/components/drivers_nrf/i2s \
-  $(SDK_ROOT)/components/libraries/mutex \
-  $(SDK_ROOT)/components/libraries/gpiote \
-  $(SDK_ROOT)/components/libraries/experimental_log/src \
-  $(SDK_ROOT)/components/drivers_nrf/gpiote \
-  $(SDK_ROOT)/components/libraries/fifo \
-  $(SDK_ROOT)/components/boards \
-  $(SDK_ROOT)/components/libraries/experimental_memobj \
-  $(SDK_ROOT)/components/drivers_nrf/common \
-  $(SDK_ROOT)/components/ble/ble_advertising \
-  $(SDK_ROOT)/components/ble/ble_services/ble_bas_c \
-  $(SDK_ROOT)/components/ble/ble_services/ble_hrs_c \
-  $(SDK_ROOT)/components/libraries/queue \
-  $(SDK_ROOT)/components/libraries/pwr_mgmt \
-  $(SDK_ROOT)/components/ble/ble_dtm \
-  $(SDK_ROOT)/components/toolchain/cmsis/include \
-  $(SDK_ROOT)/components/ble/ble_services/ble_rscs_c \
-  $(SDK_ROOT)/components/drivers_nrf/uart \
-  $(SDK_ROOT)/components/ble/common \
-  $(SDK_ROOT)/components/ble/ble_services/ble_lls \
-  $(SDK_ROOT)/components/drivers_nrf/wdt \
-  $(SDK_ROOT)/components/libraries/bsp \
-  $(SDK_ROOT)/components/ble/ble_db_discovery \
-  $(SDK_ROOT)/components/ble/ble_services/ble_bas \
-  $(SDK_ROOT)/components/libraries/experimental_section_vars \
-  $(SDK_ROOT)/components/ble/ble_services/ble_ans_c \
-  $(SDK_ROOT)/components/libraries/slip \
-  $(SDK_ROOT)/components/libraries/mem_manager \
-  $(SDK_ROOT)/external/segger_rtt \
-  $(SDK_ROOT)/components/libraries/usbd/class/cdc \
-  $(SDK_ROOT)/components/drivers_nrf/hal \
-  $(SDK_ROOT)/components/ble/ble_services/ble_nus_c \
-  $(SDK_ROOT)/components/drivers_nrf/rtc \
-  $(SDK_ROOT)/components/softdevice/common \
-  $(SDK_ROOT)/components/ble/ble_services/ble_ias \
-  $(SDK_ROOT)/components/libraries/usbd/class/hid/mouse \
-  $(SDK_ROOT)/components/libraries/ecc \
-  $(SDK_ROOT)/components/drivers_nrf/ppi \
-  $(SDK_ROOT)/components/ble/ble_services/ble_dfu \
-  $(SDK_ROOT)/external/fprintf \
-  $(SDK_ROOT)/components/drivers_nrf/twis_slave \
-  $(SDK_ROOT)/components/libraries/atomic \
-  $(SDK_ROOT)/components \
-  $(SDK_ROOT)/components/libraries/scheduler \
-  $(SDK_ROOT)/components/libraries/experimental_log \
-  $(SDK_ROOT)/components/ble/ble_services/ble_hts \
-  $(SDK_ROOT)/components/drivers_nrf/delay \
-  $(SDK_ROOT)/components/libraries/crc16 \
-  $(SDK_ROOT)/components/drivers_nrf/timer \
-  $(SDK_ROOT)/components/libraries/util \
-  $(SDK_ROOT)/components/drivers_nrf/pwm \
+  $(SDK_DIR)/blend \
+  $(SDK_DIR)/components/drivers_nrf/comp \
+  $(SDK_DIR)/components/drivers_nrf/twi_master \
+  $(SDK_DIR)/components/ble/ble_services/ble_ancs_c \
+  $(SDK_DIR)/components/ble/ble_services/ble_ias_c \
+  $(SDK_DIR)/components/libraries/pwm \
+  $(SDK_DIR)/components/libraries/usbd/class/cdc/acm \
+  $(SDK_DIR)/components/libraries/usbd/class/hid/generic \
+  $(SDK_DIR)/components/libraries/usbd/class/msc \
+  $(SDK_DIR)/components/libraries/usbd/class/hid \
+  $(SDK_DIR)/components/ble/ble_services/ble_lbs \
+  $(SDK_DIR)/components/ble/ble_services/ble_gls \
+  $(SDK_DIR)/components/libraries/fstorage \
+  $(SDK_DIR)/components/drivers_nrf/i2s \
+  $(SDK_DIR)/components/libraries/mutex \
+  $(SDK_DIR)/components/libraries/gpiote \
+  $(SDK_DIR)/components/libraries/experimental_log/src \
+  $(SDK_DIR)/components/drivers_nrf/gpiote \
+  $(SDK_DIR)/components/libraries/fifo \
+  $(SDK_DIR)/components/boards \
+  $(SDK_DIR)/components/libraries/experimental_memobj \
+  $(SDK_DIR)/components/drivers_nrf/common \
+  $(SDK_DIR)/components/ble/ble_advertising \
+  $(SDK_DIR)/components/ble/ble_services/ble_bas_c \
+  $(SDK_DIR)/components/ble/ble_services/ble_hrs_c \
+  $(SDK_DIR)/components/libraries/queue \
+  $(SDK_DIR)/components/libraries/pwr_mgmt \
+  $(SDK_DIR)/components/ble/ble_dtm \
+  $(SDK_DIR)/components/toolchain/cmsis/include \
+  $(SDK_DIR)/components/ble/ble_services/ble_rscs_c \
+  $(SDK_DIR)/components/drivers_nrf/uart \
+  $(SDK_DIR)/components/ble/common \
+  $(SDK_DIR)/components/ble/ble_services/ble_lls \
+  $(SDK_DIR)/components/drivers_nrf/wdt \
+  $(SDK_DIR)/components/libraries/bsp \
+  $(SDK_DIR)/components/ble/ble_db_discovery \
+  $(SDK_DIR)/components/ble/ble_services/ble_bas \
+  $(SDK_DIR)/components/libraries/experimental_section_vars \
+  $(SDK_DIR)/components/ble/ble_services/ble_ans_c \
+  $(SDK_DIR)/components/libraries/slip \
+  $(SDK_DIR)/components/libraries/mem_manager \
+  $(SDK_DIR)/external/segger_rtt \
+  $(SDK_DIR)/components/libraries/usbd/class/cdc \
+  $(SDK_DIR)/components/drivers_nrf/hal \
+  $(SDK_DIR)/components/ble/ble_services/ble_nus_c \
+  $(SDK_DIR)/components/drivers_nrf/rtc \
+  $(SDK_DIR)/components/softdevice/common \
+  $(SDK_DIR)/components/ble/ble_services/ble_ias \
+  $(SDK_DIR)/components/libraries/usbd/class/hid/mouse \
+  $(SDK_DIR)/components/libraries/ecc \
+  $(SDK_DIR)/components/drivers_nrf/ppi \
+  $(SDK_DIR)/components/ble/ble_services/ble_dfu \
+  $(SDK_DIR)/external/fprintf \
+  $(SDK_DIR)/components/drivers_nrf/twis_slave \
+  $(SDK_DIR)/components/libraries/atomic \
+  $(SDK_DIR)/components \
+  $(SDK_DIR)/components/libraries/scheduler \
+  $(SDK_DIR)/components/libraries/experimental_log \
+  $(SDK_DIR)/components/ble/ble_services/ble_hts \
+  $(SDK_DIR)/components/drivers_nrf/delay \
+  $(SDK_DIR)/components/libraries/crc16 \
+  $(SDK_DIR)/components/drivers_nrf/timer \
+  $(SDK_DIR)/components/libraries/util \
+  $(SDK_DIR)/components/drivers_nrf/pwm \
   ../config \
-  $(SDK_ROOT)/components/libraries/csense_drv \
-  $(SDK_ROOT)/components/libraries/csense \
-  $(SDK_ROOT)/components/libraries/balloc \
-  $(SDK_ROOT)/components/libraries/low_power_pwm \
-  $(SDK_ROOT)/components/libraries/hardfault \
-  $(SDK_ROOT)/components/ble/ble_services/ble_cscs \
-  $(SDK_ROOT)/components/libraries/uart \
-  $(SDK_ROOT)/components/libraries/hci \
-  $(SDK_ROOT)/components/libraries/usbd/class/hid/kbd \
-  $(SDK_ROOT)/components/drivers_nrf/spi_slave \
-  $(SDK_ROOT)/components/drivers_nrf/lpcomp \
-  $(SDK_ROOT)/components/libraries/timer \
-  $(SDK_ROOT)/components/softdevice/s140/headers \
-  $(SDK_ROOT)/components/drivers_nrf/rng \
-  $(SDK_ROOT)/components/drivers_nrf/power \
-  $(SDK_ROOT)/components/libraries/usbd/config \
-  $(SDK_ROOT)/components/toolchain \
-  $(SDK_ROOT)/components/libraries/led_softblink \
-  $(SDK_ROOT)/components/drivers_nrf/qdec \
-  $(SDK_ROOT)/components/ble/ble_services/ble_cts_c \
-  $(SDK_ROOT)/components/drivers_nrf/spi_master \
-  $(SDK_ROOT)/components/ble/ble_services/ble_nus \
-  $(SDK_ROOT)/components/ble/ble_services/ble_hids \
-  $(SDK_ROOT)/components/libraries/strerror \
-  $(SDK_ROOT)/components/drivers_nrf/pdm \
-  $(SDK_ROOT)/components/libraries/crc32 \
-  $(SDK_ROOT)/components/libraries/usbd/class/audio \
-  $(SDK_ROOT)/components/softdevice/s140/headers/nrf52 \
-  $(SDK_ROOT)/components/ble/peer_manager \
-  $(SDK_ROOT)/components/drivers_nrf/swi \
-  $(SDK_ROOT)/components/ble/ble_services/ble_tps \
-  $(SDK_ROOT)/components/ble/ble_services/ble_dis \
-  $(SDK_ROOT)/components/device \
-  $(SDK_ROOT)/components/ble/nrf_ble_gatt \
-  $(SDK_ROOT)/components/ble/nrf_ble_qwr \
-  $(SDK_ROOT)/components/libraries/button \
-  $(SDK_ROOT)/components/libraries/usbd \
-  $(SDK_ROOT)/components/drivers_nrf/saadc \
-  $(SDK_ROOT)/components/libraries/atomic_fifo \
-  $(SDK_ROOT)/components/ble/ble_services/ble_lbs_c \
-  $(SDK_ROOT)/components/ble/ble_racp \
-  $(SDK_ROOT)/components/toolchain/gcc \
-  $(SDK_ROOT)/components/libraries/fds \
-  $(SDK_ROOT)/components/libraries/twi \
-  $(SDK_ROOT)/components/drivers_nrf/clock \
-  $(SDK_ROOT)/components/ble/ble_services/ble_rscs \
-  $(SDK_ROOT)/components/drivers_nrf/usbd \
-  $(SDK_ROOT)/components/ble/ble_services/ble_hrs \
+  $(SDK_DIR)/components/libraries/csense_drv \
+  $(SDK_DIR)/components/libraries/csense \
+  $(SDK_DIR)/components/libraries/balloc \
+  $(SDK_DIR)/components/libraries/low_power_pwm \
+  $(SDK_DIR)/components/libraries/hardfault \
+  $(SDK_DIR)/components/ble/ble_services/ble_cscs \
+  $(SDK_DIR)/components/libraries/uart \
+  $(SDK_DIR)/components/libraries/hci \
+  $(SDK_DIR)/components/libraries/usbd/class/hid/kbd \
+  $(SDK_DIR)/components/drivers_nrf/spi_slave \
+  $(SDK_DIR)/components/drivers_nrf/lpcomp \
+  $(SDK_DIR)/components/libraries/timer \
+  $(SDK_DIR)/components/softdevice/s140/headers \
+  $(SDK_DIR)/components/drivers_nrf/rng \
+  $(SDK_DIR)/components/drivers_nrf/power \
+  $(SDK_DIR)/components/libraries/usbd/config \
+  $(SDK_DIR)/components/toolchain \
+  $(SDK_DIR)/components/libraries/led_softblink \
+  $(SDK_DIR)/components/drivers_nrf/qdec \
+  $(SDK_DIR)/components/ble/ble_services/ble_cts_c \
+  $(SDK_DIR)/components/drivers_nrf/spi_master \
+  $(SDK_DIR)/components/ble/ble_services/ble_nus \
+  $(SDK_DIR)/components/ble/ble_services/ble_hids \
+  $(SDK_DIR)/components/libraries/strerror \
+  $(SDK_DIR)/components/drivers_nrf/pdm \
+  $(SDK_DIR)/components/libraries/crc32 \
+  $(SDK_DIR)/components/libraries/usbd/class/audio \
+  $(SDK_DIR)/components/softdevice/s140/headers/nrf52 \
+  $(SDK_DIR)/components/ble/peer_manager \
+  $(SDK_DIR)/components/drivers_nrf/swi \
+  $(SDK_DIR)/components/ble/ble_services/ble_tps \
+  $(SDK_DIR)/components/ble/ble_services/ble_dis \
+  $(SDK_DIR)/components/device \
+  $(SDK_DIR)/components/ble/nrf_ble_gatt \
+  $(SDK_DIR)/components/ble/nrf_ble_qwr \
+  $(SDK_DIR)/components/libraries/button \
+  $(SDK_DIR)/components/libraries/usbd \
+  $(SDK_DIR)/components/drivers_nrf/saadc \
+  $(SDK_DIR)/components/libraries/atomic_fifo \
+  $(SDK_DIR)/components/ble/ble_services/ble_lbs_c \
+  $(SDK_DIR)/components/ble/ble_racp \
+  $(SDK_DIR)/components/toolchain/gcc \
+  $(SDK_DIR)/components/libraries/fds \
+  $(SDK_DIR)/components/libraries/twi \
+  $(SDK_DIR)/components/drivers_nrf/clock \
+  $(SDK_DIR)/components/ble/ble_services/ble_rscs \
+  $(SDK_DIR)/components/drivers_nrf/usbd \
+  $(SDK_DIR)/components/ble/ble_services/ble_hrs \
 
 # Libraries common to all targets
 LIB_FILES += \
@@ -247,7 +246,7 @@ help:
 	@echo following targets are available:
 	@echo 	nrf52840_xxaa
 
-TEMPLATE_PATH := $(SDK_ROOT)/components/toolchain/gcc
+TEMPLATE_PATH := $(SDK_DIR)/components/toolchain/gcc
 
 include $(TEMPLATE_PATH)/Makefile.common
 
@@ -264,7 +263,7 @@ flash: $(OUTPUT_DIRECTORY)/nrf52840_xxaa.hex
 # Flash softdevice
 flash_softdevice:
 	@echo Flashing: s140_nrf52840_5.0.0-2.alpha_softdevice.hex
-	nrfjprog -f nrf52 --program $(SDK_ROOT)/components/softdevice/s140/hex/s140_nrf52840_5.0.0-2.alpha_softdevice.hex --sectorerase
+	nrfjprog -f nrf52 --program $(SDK_DIR)/components/softdevice/s140/hex/s140_nrf52840_5.0.0-2.alpha_softdevice.hex --sectorerase
 	nrfjprog -f nrf52 --reset
 
 erase:
