fix SDK 15 blend and make file

--- a/src/blend_project_templates/nRF5_SDK_v14/blend_app_template/pca10056/s140/armgcc/Makefile
+++ b/src/blend_project_templates/nRF5_SDK_v14/blend_app_template/pca10056/s140/armgcc/Makefile
@@ -14,8 +14,8 @@ $(OUTPUT_DIRECTORY)/nrf52840_xxaa.out: \
 
 # Source files common to all targets
 SRC_FILES += \
-  $(LOCAL_SRC_DIR)/main.c \
-  $(SDK_DIR)/blend/blend.c \
+  $(LOCAL_SRCS) \
+  $(PROJ_ROOT)/src/blend/blend.c \
   $(SDK_DIR)/components/libraries/experimental_log/src/nrf_log_backend_rtt.c \
   $(SDK_DIR)/components/libraries/experimental_log/src/nrf_log_backend_serial.c \
   $(SDK_DIR)/components/libraries/experimental_log/src/nrf_log_default_backends.c \
